# JarPackager

./: .gitignore  CMakeLists.txt  README.md  license.txt
attacher/: CMakeLists.txt
attacher/src/: main.cpp
cmake/: build.cmake  deploy.cmake  jni.cmake
common/: CMakeLists.txt
common/include/: attach.h  jarcommon.h  modify.h  strings.h  stylecommon.h
common/src/: attach.cpp  jarcommon.cpp  modify.cpp
launcher/: CMakeLists.txt  app.manifest
launcher/include/: splashscreen.h
launcher/src/: main.cpp  splashscreen.cpp
packager/: CMakeLists.txt  app.rc  configure_file.cmake
packager/include/: jarpackager.h
packager/src/: jarpackager.cpp  main.cpp
packager/ui/: jarpackager.ui
